V1.1 UPDATE